# git-config-switcher

./: .gitignore  Cargo.toml
src/: add.rs  cli.rs  list.rs  main.rs  remove.rs  switch.rs  types.rs  utils.rs
