[package]
name = "git-config-switcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo"] }
quote = "1.0.26"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.95"
syn = "2.0.12"

[[bin]]
name = "gitswitcher"
path = "src/main.rs"
